Fixed left menu collapse

--- a/ui/app/styles/style.css
+++ b/ui/app/styles/style.css
@@ -1,3 +1,6 @@
+a{
+  cursor: pointer;
+}
 /* -----------------------------------------
    Template helpers
 ----------------------------------------- */
